- Fixed overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -76,6 +76,7 @@ header {
     align-items: center;
     height: 8rem;
     gap: 65%;
+    width: 100%;
 }
 /* Navigation styling */
 nav {
@@ -83,6 +84,7 @@ nav {
     flex-direction: row;
     align-items: center;
     flex: 2;
+    width: 90%;
 }
 
 li {
@@ -92,7 +94,7 @@ li {
 
 nav a {
     margin: 0.05rem;
-    padding: 3rem;
+    padding: 1rem;
     text-align: center;
     border-radius: 0.5rem;
     color: white;
@@ -109,7 +111,7 @@ a:hover {
 /* Hero section styling */
 #hero {
     height: 40rem;
-    width: 187.5%;
+    width: 150%;
     margin: 0;
     padding: 0;
     display: flex;
